# inbox

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  example.env
schema/: @analyzers.surql  domain.surql  email.surql  email_address.surql  email_attachment.surql  has_domain.surql  has_email_delivery.surql  has_email_state.surql  has_shared_inbox_member.surql  mailbox.surql  outbound_delivery.surql  outbound_queue.surql  shared_inbox.surql  shared_inbox_event.surql  smtp_rate_limit.surql  suppression.surql  tls_rpt_checkpoint.surql
src/: db.rs  lib.rs  main.rs  telemetry.rs
src/api/: mod.rs
src/config/: mod.rs  r2.rs
src/integrations/: mod.rs
src/integrations/clamav/: error.rs  mod.rs
src/protocol/: mod.rs  state.rs
src/protocol/handler/: mod.rs
src/protocols/: mod.rs
src/protocols/dav/: fs.rs  mod.rs
src/protocols/smtp/: commands.rs  error.rs  mod.rs  rate_limit.rs  state.rs  transaction.rs
src/protocols/smtp/handler/: attachment.rs  incoming.rs  mod.rs  outgoing.rs  tls.rs
src/protocols/smtp/handler/tls/: dane.rs  mod.rs  mta_sts.rs  reporting.rs
src/protocols/smtp/queue/: bounce.rs  dsn.rs  mod.rs  model.rs  tls_rpt.rs  worker.rs
src/server/: http.rs  mod.rs  server.rs  submission.rs  transfer.rs
src/storage/: mod.rs
tests/: smtp_integration.rs
