[workspace]
resolver = '3'
members = ['packages/smtp']

[workspace.dependencies]
mail-auth = { version = '0.7.2', features = ['rkyv'] }
mail-builder = { version = '0.4.4' }
mail-parser = { version = '0.11.1', features = ['full_encoding'] }
mail-send = { version = '0.5.2', default-features = false, features = ['cram-md5', 'ring', 'tls12'] }
rayon = '1.11.0'
smtp-proto = { version = '0.2.0', features = ['rkyv', 'serde'] }
surrealdb = { version = '3.0.0-alpha.9', features = ['protocol-http'] }
tokio = { version = '1', features = ['full'] }
tracing = { version = '0.1.41' }
tracing-subscriber = { version = '0.3.20' }
serde = { version = '1', features = ['derive'] }
