[package]
name = 'inbox'
publish = false
version = '0.1.0'
edition = '2024'

[dependencies]
async-graphql = { version = '7.0.17', features = ['chrono', 'graphiql'] }
async-graphql-axum = '7.0.17'
axum = { version = '0.8.6' }
base64 = '0.22.1'
chrono = { version = '0.4.42' }
clamav-client = { version = '2.2.0', features = ['tokio-stream'] }
cloudflare-r2-rs = '0.6.8'
dav-server = '0.8.0'
dotenv = '0.15.0'
email_address = '0.2.9'
hyper = { version = '1.7.0', features = ['full'] }
hyper-util = { version = '0.1.17', features = ['full'] }
http-body-util = '0.1.3'
mail-auth = { version = '0.7.2', features = ['rkyv'] }
mail-builder = { version = '0.4.4' }
mail-parser = { version = '0.11.1', features = ['full_encoding'] }
mail-send = { version = '0.5.2', default-features = false, features = ['cram-md5', 'dkim', 'ring', 'tls12'] }
psl = '2'
rayon = '1.11.0'
rustls = { version = '0.23.34', features = ['ring'] }
serde = { version = '1', features = ['derive'] }
smtp-proto = { version = '0.2.0', features = ['rkyv', 'serde'] }
surrealdb = { version = '3.0.0-alpha.12', features = ['protocol-http'] }
surrealdb-types = '3.0.0-alpha.12'
thiserror = '2'
tokio = { version = '1', features = ['full'] }
tokio-stream = '0.1.17'
tokio-util = '0.7.16'
tower = { version = '0.5.2' }
tracing = { version = '0.1.41' }
tracing-subscriber = { version = '0.3.20' }
tracing-opentelemetry = { version = '0.32.0' }
